maze.lessons.maze.island.IslandMaze.scala.error
Escaper:34: error: not found: value ecrisMessage
  ecrisMessage("5")
  ^